--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
     "description": "Tortugo e-commerce website with contact form and password reset functionality",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js"
     },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/sumitjethani/shopping-website.git"
+        "type": "git",
+        "url": "https://github.com/sumitjethani/shopping-website.git"
     },
     "author": "Sumit Jethani",
     "license": "ISC",
     "dependencies": {
-      "body-parser": "^1.20.2",
-      "cors": "^2.8.5",
-      "dotenv": "^16.4.5",
-      "express": "^4.18.2",
-      "nodemailer": "^6.9.13"
+        "body-parser": "^1.20.2",
+        "connect-mongo": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "mongoose": "^8.14.3",
+        "nodemailer": "^6.9.13"
     },
     "devDependencies": {
-      "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0"
     }
-  }
+}
